--- a/Netflix-Clone-App/src/app/components/home/home.component.html
+++ b/Netflix-Clone-App/src/app/components/home/home.component.html
@@ -1,1 +1,6 @@
 <h1 class="text-3xl font-bold underline">Hello, Netflix-Clone-App</h1>
+<button
+  (click)="logout()"
+  class="mt-10 w-full rounded-md bg-red-600 py-3 text-white transition-all hover:bg-red-700">
+  Logout
+</button>
