changed css styling

--- a/Netflix-Clone-App/src/app/components/auth/auth.component.html
+++ b/Netflix-Clone-App/src/app/components/auth/auth.component.html
@@ -2,7 +2,7 @@
 <div
   class="h-screen w-screen bg-[url('assets/images/hero.jpg')] bg-cover bg-fixed bg-center bg-no-repeat">
   <!-- dark overlay on background image -->
-  <div class="h-full w-full bg-black lg:bg-opacity-50">
+  <div class="h-screen w-screen bg-black lg:bg-opacity-50">
     <!-- navbar with logo -->
     <nav class="px-12 py-5">
       <img src="assets/images/logo.png" alt="logo" class="h-12" />
